--- a/index.html
+++ b/index.html
@@ -33,32 +33,37 @@
             </div>
         </div>
 
-        <!-- Train Schedule Card -->
-        <div class="card">
-            <div class="card-header">Current Train Schedule</div>
-            <div class="card-body">
-                <table class="table">
+        <!-- Train Schedule Panel -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Current Train Schedule</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table">
 
-                    <!-- Table header row -->
-                    <thead>
-                        <tr>
-                            <th scope="col">Train Name</th>
-                            <th scope="col">Destination</th>
-                            <th scope="col">Frequency (min)</th>
-                            <th scope="col">Next Arrival</th>
-                            <th scope="col">Minutes Away</th>
-                        </tr>
-                    </thead>
+                            <!-- Table header row -->
+                            <thead>
+                                <tr>
+                                    <th>Train Name</th>
+                                    <th>Destination</th>
+                                    <th>Frequency (min)</th>
+                                    <th>Next Arrival</th>
+                                    <th>Minutes Away</th>
+                                </tr>
+                            </thead>
 
-                    <!-- Output Row for each entry from input below -->
-                    <tbody id="outPutRow"></tbody>
+                            <!-- Output Row for each entry from input below -->
+                            <tbody id="outPutRow"></tbody>
 
-                </table>
-
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <!-- Add New Employee Panel -->
+        <!-- Add New Train Panel -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="panel panel-default">
@@ -95,15 +100,7 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
     </div>
-
 
     <!-- jQuery JS -->
     <script src="https://code.jquery.com/jquery.js"></script>
