Setting up firebase and JS

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
+    <!-- Firebase Link -->
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+
     <!-- My CSS Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -106,7 +109,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
 
     <!-- app.js -->
-    <!-- <script src="assets/javascript/app.js"></script> -->
+    <script src="assets/javascript/app.js"></script>
 
 </body>
 
