--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Firebase Link -->
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
 
+    <!-- Moment JS Link -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
     <!-- My CSS Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
