--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                             <div class="form-group">
                                 <label for="trainTime">First Train Time (HH:mm - military time)</label>
-                                <input type="text" class="form-control" id="trainTime">
+                                <input type="time" class="form-control" id="trainTime">
                             </div>
 
                             <div class="form-group">
