--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                             <div class="form-group">
                                 <label for="trainTime">First Train Time (HH:mm - military time)</label>
-                                <input type="time" class="form-control" id="trainTime">
+                                <input type="text" class="form-control" id="trainTime">
                             </div>
 
                             <div class="form-group">
@@ -112,7 +112,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
 
     <!-- app.js -->
-    <script src="assets/javascript/app.js"></script>
+    <script src="assets/javascript/logic.js"></script>
 
 </body>
 
