app.js final functionality

--- a/index.html
+++ b/index.html
@@ -80,23 +80,23 @@
                         <form role="form">
 
                             <div class="form-group">
-                                <label for="trainName">Train Name</label>
-                                <input type="text" class="form-control" id="trainName">
+                                <label for="name-input">Train Name</label>
+                                <input type="text" class="form-control" id="name-input">
                             </div>
 
                             <div class="form-group">
-                                <label for="trainDestination">Destination</label>
-                                <input type="text" class="form-control" id="trainDestination">
+                                <label for="dest-input">Destination</label>
+                                <input type="text" class="form-control" id="dest-input">
                             </div>
 
                             <div class="form-group">
-                                <label for="trainTime">First Train Time (HH:mm - military time)</label>
-                                <input type="text" class="form-control" id="trainTime">
+                                <label for="time-input">First Train Time (HH:mm - military time)</label>
+                                <input type="text" class="form-control" id="time-input">
                             </div>
 
                             <div class="form-group">
-                                <label for="trainFrequency">Frequency (min)</label>
-                                <input type="text" class="form-control" id="trainFrequency">
+                                <label for="freq-input">Frequency (min)</label>
+                                <input type="text" class="form-control" id="freq-input">
                             </div>
 
                             <button type="submit" class="btn btn-default" id="submitBtn">Submit</button>
@@ -112,7 +112,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
 
     <!-- app.js -->
-    <script src="assets/javascript/logic.js"></script>
+    <script src="assets/javascript/app.js"></script>
 
 </body>
 
