--- a/index.html
+++ b/index.html
@@ -29,17 +29,22 @@
 
 <body>
 
-    <div class="container">
-
-        <!-- Jumbotron -->
-        <div class="jumbotron text-center">
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+        <div class="container text-center">
             <div>
-                <i class="far fa-clock fa-3x"></i>
-                <span class="heading">Train Scheduler</span>
+                <br>
+                <br>
+                <i class="far fa-clock fa-5x"></i>
+                <div class="heading">Train Scheduler</div>
+                <br>
+                <br>
             </div>
         </div>
+    </div>
 
-        <!-- Train Schedule Panel -->
+    <!-- Train Schedule Panel -->
+    <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="panel panel-default">
@@ -77,6 +82,7 @@
                         <h3 class="panel-title">Add Train</h3>
                     </div>
                     <div class="panel-body">
+
                         <form role="form">
 
                             <div class="form-group">
@@ -107,6 +113,8 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
 
     <!-- jQuery JS -->
     <script src="https://code.jquery.com/jquery.js"></script>
